--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,10 +1,44 @@
 <h2>Details about the car:</h2>
 <div><span>ID: {{car.id}}</span></div>
-<div><span>Brand: {{car.brand | uppercase}}</span></div>
+<div><span>Brand: {{car.brand}}</span></div>
 <div><span>Model: {{car.model}}</span></div>
 <div><span>Year: {{car.year}}</span></div>
 
 <div>
   <label for="brand">Car Brand: </label>
-  <input id="brand" [(ngModel)]="car.brand" placeholder="Car Brand" />
+  <input id="brand" [(ngModel)]="input" placeholder="Car Brand" />
+</div>
+
+<div>
+  You entered: {{input}}
+</div>
+
+<h2>Car List</h2>
+<ul>
+  <li *ngFor="let car of cars">
+    <div [class.selected]="car === selectedCar" (click)="onSelect(car)">
+      <button type="button">
+        +
+      </button>
+      <span> {{car.year}} {{car.brand}} {{car.model}}</span>
+    </div>
+  </li>
+</ul>
+
+<div *ngIf="selectedCar">
+  <h2>{{selectedCar.year}} {{selectedCar.brand}} {{selectedCar.model}}</h2>
+  <div>
+    <label for="carYear">
+      Year:
+      <input type="text" id="carYear" [(ngModel)]="selectedCar.year"/>
+    </label>
+    <label for="carBrand">
+      Brand:
+      <input type="text" id="carBrand" [(ngModel)]="selectedCar.brand"/>
+    </label>
+    <label for="carModel">
+      Model:
+      <input type="text" id="carModel" [(ngModel)]="selectedCar.model"/>
+    </label>
+  </div>
 </div>
