--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <h1>{{title}}</h1>
+<!-- added route -->
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/cars">Cars</a>
+</nav>
 <!-- Component ts -->
-<app-cars></app-cars>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
