--- a/src/app/car-detail/car-detail.component.html
+++ b/src/app/car-detail/car-detail.component.html
@@ -17,4 +17,5 @@
     </label>
   </div>
   <button type="button" (click)="goBack()">Go back</button>
+  <button type="button" (click)="save()">Save</button>
 </div>
